<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/grad_bg">
    <RelativeLayout
        android:id="@+id/baseOTPLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_is_sent_to"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/sentTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
        <com.chaos.view.PinView
            android:id="@+id/otp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLayout"
            android:paddingTop="35dp"
            android:layout_marginStart="15dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:textColor="@color/white"
            app:cursorColor="@android:color/white"
            app:itemCount="6"
            app:itemRadius="5dp"
            app:lineColor="@color/white"
            app:lineWidth="3dp"
            app:viewType="rectangle"
            android:focusable="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotologin"
            android:layout_below="@id/otp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:onClick="reOpenLogin" />
        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/keypad"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@drawable/rect_btn_red"
            android:text="@string/resend_otp"
            android:textColor="@color/white" />
        <include
            layout="@layout/keypad"
            android:id="@+id/keypad"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/progressRelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:id="@+id/company_logo_progress"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/company_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/company_logo" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_logo_progress"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>